<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.quizproject.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/cartoonImage"
            android:layout_width="@dimen/imageViewWidth"
            android:layout_height="@dimen/imageViewHeight"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/imageViewTop"
            android:background="@drawable/ninasimone"
            android:foreground="@drawable/imageview"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mainQuestion"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/answerOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainAnswerOne"
                android:textColor="@color/colorAccent"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/answerTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainAnswerTwo"
                android:textColor="@color/colorAccent"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/answerThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainAnswerThree"
                android:textColor="@color/colorAccent"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:onClick="backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Merginbutton"
                android:layout_weight="2"
                android:background="@drawable/buttonbottom"
                android:text="@string/backButton"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/buttonTextSize" />
            <TextView
                android:id="@+id/viewScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:onClick="nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/Merginbutton"
                android:layout_weight="2"
                android:background="@drawable/buttonbottom"
                android:text="@string/nextButton"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/buttonTextSize" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
